--- a/index.html
+++ b/index.html
@@ -373,18 +373,19 @@
       button.disabled = true;
 
       try {
-        const response = await fetch("https://api.anthropic.com/v1/messages", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({
-            model: "claude-sonnet-4-20250514",
-            max_tokens: 500,
-            messages: [
-              {
-                role: "user",
-                content: `Extract job information from this posting. Return ONLY valid JSON with these fields. If a field is not mentioned, use null. Salary should be a number (just the base salary, annual). HoursPerWeek should be a number (default 45 if not mentioned). IsRemote should be true/false. FundingStage should be "seed", "series-a", "growth", or "public" (infer if needed).
+        const response = await fetch(
+          "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=AIzaSyDJXDxYHkMmah8gzTEpW4dW9h97HPpm0JI",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              contents: [
+                {
+                  parts: [
+                    {
+                      text: `Extract job information from this posting. Return ONLY valid JSON with these fields. If a field is not mentioned, use null. Salary should be a number (just the base salary, annual). HoursPerWeek should be a number (default 45 if not mentioned). IsRemote should be true/false. FundingStage should be "seed", "series-a", "growth", or "public" (infer if needed).
 
 JSON format:
 {
@@ -399,10 +400,13 @@ JSON format:
 
 Job posting:
 ${jobPosting}`
-              }
-            ]
-          })
-        });
+                    }
+                  ]
+                }
+              ]
+            })
+          }
+        );
 
         const data = await response.json();
         
@@ -410,7 +414,7 @@ ${jobPosting}`
           throw new Error(data.error.message);
         }
 
-        const textContent = data.content[0].text;
+        const textContent = data.candidates[0].content.parts[0].text;
         const jsonMatch = textContent.match(/\{[\s\S]*\}/);
         
         if (!jsonMatch) {
