--- a/index.html
+++ b/index.html
@@ -374,11 +374,12 @@
 
       try {
         const response = await fetch(
-          "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=AIzaSyDJXDxYHkMmah8gzTEpW4dW9h97HPpm0JI",
+          "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent",
           {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
+              "x-goog-api-key": "AIzaSyDJXDxYHkMmah8gzTEpW4dW9h97HPpm0JI"
             },
             body: JSON.stringify({
               contents: [
