--- a/index.html
+++ b/index.html
@@ -670,7 +670,12 @@ ${jobPosting}`
     }
 
     async function getAIAnalysis(profile, job) {
-      const prompt = `You are an expert career coach and negotiation strategist. Analyze this job offer comprehensively.
+      const prompt = `You are an expert career coach and negotiation strategist. Analyze this job offer comprehensively and provide a logically consistent recommendation.
+
+RECOMMENDATION RULES:
+- TAKE (8-10/10): Aligns with priorities, good salary, minimal downsides. Accept as-is.
+- NEGOTIATE (5-7/10): Has potential BUT missing key things (lower salary, worse hours, etc). Worth negotiating ON SPECIFIC ITEMS.
+- PASS (0-4/10): Too many fundamental misalignments. Even if you negotiate, likely won't fix core issues.
 
 USER PROFILE:
 - Current: ${profile.currentJobTitle}, ${profile.currentSalary}/year, ${profile.currentHours}h/week
@@ -681,36 +686,38 @@ ${profile.resumeData ? `- Background: ${profile.resumeData}` : ''}
 
 JOB OFFER:
 - Title: ${job.jobTitle} @ ${job.company}
-- Salary: ${job.baseSalary}/year
+- Salary: ${job.baseSalary}/year (vs current ${profile.currentSalary})
 - Equity: ${job.equity || 'None mentioned'}
 - Bonus: ${job.bonus || 'None mentioned'}
-- Hours: ${job.hoursPerWeek}h/week
+- Hours: ${job.hoursPerWeek}h/week (vs current ${profile.currentHours})
 - Setup: ${job.workEnv}
 - Stage: ${job.fundingStage}
 - Team: ${job.teamSize} people
 - Industry: ${job.industry}
 - Concerns: ${job.concerns || 'None'}
 
-Provide a detailed analysis in this JSON format:
+IMPORTANT: Match recommendation to score. Only use NEGOTIATE if 5-7/10. If score is 3/10, must be PASS. If 8+, must be TAKE.
+
+Provide JSON:
 {
   "recommendation": "TAKE|PASS|NEGOTIATE",
-  "confidence": 0-100,
   "score": 0-10,
+  "confidence": 0-100,
   "scoringBreakdown": {
-    "salary": "explanation with percentage change",
-    "workLife": "explanation",
-    "growth": "explanation",
-    "stability": "explanation",
-    "remote": "explanation",
-    "brand": "explanation"
+    "salary": "explanation with percentage change and market position",
+    "workLife": "explanation of hours and balance impact",
+    "growth": "explanation of learning/career progression opportunity",
+    "stability": "explanation based on company stage",
+    "remote": "explanation of work setup vs preference",
+    "brand": "explanation of company prestige impact"
   },
-  "strengths": ["strength1", "strength2"],
-  "weaknesses": ["weakness1", "weakness2"],
-  "negotiationPoints": ["point1", "point2"],
-  "careerImpact": "2-3 sentences on how this affects career trajectory",
-  "reasoning": "2-3 sentences explaining the recommendation",
-  "riskFactors": "key risks to consider",
-  "questions": ["question1 to ask employer", "question2"]
+  "strengths": ["strength1", "strength2", "strength3"],
+  "weaknesses": ["weakness1", "weakness2", "weakness3"],
+  "negotiableItems": ["item1 - specific thing to push for", "item2"],
+  "careerImpact": "2-3 sentences on career trajectory impact",
+  "reasoning": "2-3 sentences - WHY this recommendation at this score",
+  "riskFactors": "key risks if you take this",
+  "questions": ["question1 to ask?", "question2 to ask?"]
 }`;
 
       const response = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent", {
@@ -804,10 +811,11 @@ Provide a detailed analysis in this JSON format:
           ${analysis.weaknesses.map(w => `<div class="con-item">${w}</div>`).join('')}
         </div>
 
-        ${analysis.recommendation === 'NEGOTIATE' ? `
+        ${analysis.recommendation === 'NEGOTIATE' && analysis.negotiableItems ? `
         <div class="ai-insight">
-          <h3>🤝 Negotiation Strategy</h3>
-          ${analysis.negotiationPoints.map(p => `<p>• ${p}</p>`).join('')}
+          <h3>🤝 What to Negotiate</h3>
+          <p style="margin-bottom: 12px; color: #64ff9f;">This offer has potential. Push back on these specific items:</p>
+          ${analysis.negotiableItems.map(p => `<p style="margin: 8px 0;">• ${p}</p>`).join('')}
         </div>
         ` : ''}
 
