--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OfferFit - Job Decision Analyzer</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MWGBVLDZTW"></script>
 <script>
@@ -262,8 +264,7 @@
     <div class="landing-content">
       <h1>OfferFit</h1>
       <p class="tagline">Stop making job decisions emotionally.</p>
-      <p class="subtitle">AI-powered analysis based on YOUR background, priorities & market data. <strong>Free. No credit card.</strong></p>
-      <button class="cta-button" onclick="startApp()">Analyze My Next Offer →</button>
+<p class="subtitle">AI-powered analysis based on YOUR background, priorities & market data. <strong>Smart decisions cost less than a bad job.</strong></p>      <button class="cta-button" onclick="startApp()">Analyze My Next Offer →</button>
 
       <div class="social-proof">
         <p><strong>⭐ 4.9/5</strong> from early users</p>
@@ -308,7 +309,7 @@
       <div class="final-cta">
         <h2>Make smarter career moves</h2>
         <p>AI analyzes your full background in 2 minutes. Let's go.</p>
-        <button class="cta-button" onclick="startApp()" style="padding: 18px 56px; font-size: 18px;">Start Now - Free</button>
+        <button class="cta-button" onclick="startApp()" style="padding: 18px 56px; font-size: 18px;">Start Now</button>
       </div>
 
       <footer style="margin-top: 80px; padding-top: 30px; border-top: 1px solid rgba(76, 181, 255, 0.2); text-align: center;">
