--- a/index.html
+++ b/index.html
@@ -1120,6 +1120,7 @@ if (
 
   const profile = {
     currentJobTitle: document.getElementById('currentJobTitle').value,
+    currentCompany: document.getElementById('currentCompany').value,
     currentSalary,
     currentHours: parseInt(document.getElementById('currentHours').value),
     yearsExp: parseInt(document.getElementById('yearsExp').value),
