--- a/index.html
+++ b/index.html
@@ -988,28 +988,31 @@
     }
 
     async function extractResumeData() {
-      if (!resumeData) return;
+  if (!resumeData) return;
 
-      const btn = document.getElementById('extractResumeBtn');
-      btn.textContent = '⏳ Extracting...';
-      btn.disabled = true;
+  const btn = document.getElementById('extractResumeBtn');
+  btn.textContent = '⏳ Extracting...';
+  btn.disabled = true;
 
-      try {
-        const response = await fetch("/api/extract-resume", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ resumeText: resumeData.text })
-        });
+  try {
+    const response = await fetch("/api/extract-resume", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ resumeText: resumeData.text })
+    });
 
-        if (!response.ok) throw new Error('API error');
-        const extracted = await response.json();
+    if (!response.ok) throw new Error('API error');
+    const extracted = await response.json();
 
-        if (extracted.currentJobTitle) {
-          document.getElementById('currentJobTitle').value = extracted.currentJobTitle;
-        }
-        if (extracted.yearsOfExperience) {
-          document.getElementById('yearsExp').value = extracted.yearsOfExperience;
-        }
+    if (extracted.currentJobTitle) {
+      document.getElementById('currentJobTitle').value = extracted.currentJobTitle;
+    }
+    if (extracted.currentCompany) {
+      document.getElementById('currentCompany').value = extracted.currentCompany;
+    }
+    if (extracted.yearsOfExperience) {
+      document.getElementById('yearsExp').value = extracted.yearsOfExperience;
+    }
 
         btn.textContent = '✅ Extracted!';
         setTimeout(() => {
