--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
   <div id="landingPage" class="landing">
     <div class="landing-content">
       <h1>OfferFit</h1>
-      <p class="tagline">Stop making job decisions emotionally.</p>
-<p class="subtitle">AI-powered analysis based on YOUR background, priorities & market data. <strong>Smart decisions cost less than a bad job.</strong></p>      <button class="cta-button" onclick="startApp()">Analyze My Next Offer →</button>
+<p class="tagline">Find the right job before you apply.</p>
+<p class="subtitle">AI-powered screening based on YOUR background and priorities. <strong>Skip the wrong jobs. Apply to the right ones.</strong></p>
 
      <div class="social-proof">
   <p><strong>⭐ 4.9/5</strong> from early users</p>
