--- a/index.html
+++ b/index.html
@@ -416,7 +416,8 @@
     <div class="landing-content">
       <h1>OfferFit</h1>
       <p class="tagline">Stop making job decisions emotionally.</p>
-<p class="subtitle">AI-powered analysis based on YOUR background, priorities & market data. <strong>Smart decisions cost less than a bad job.</strong></p>      <button class="cta-button" onclick="startApp()">Analyze My Next Offer →</button>
+<p class="tagline">Find the right job before you apply.</p>
+<p class="subtitle">AI-powered screening based on YOUR background and priorities. <strong>Skip the wrong jobs. Apply to the right ones.</strong></p>     <button class="cta-button" onclick="startApp()">Screen Job Postings →</button>
 
      <div class="social-proof">
   <p><strong>⭐ 4.9/5</strong> from early users</p>
@@ -497,8 +498,8 @@
           </div>
           <div class="step">
             <div class="step-number">2</div>
-            <h3>Enter Job Offer</h3>
-            <p>Paste job posting or enter details. AI extracts everything.</p>
+            <h3>Paste Job Posting</h3>
+            <p>Paste any job posting from LinkedIn, Indeed, or email. AI extracts everything.</p>
           </div>
           <div class="step">
             <div class="step-number">3</div>
@@ -523,8 +524,8 @@
       </div>
 
       <div class="final-cta">
-        <h2>Make smarter career moves</h2>
-        <p>AI analyzes your full background in 2 minutes. Let's go.</p>
+        <h2>Screen smarter. Apply better.</h2>
+<p>Find out if a job fits YOU before wasting time applying.</p>
         <button class="cta-button" onclick="startApp()" style="padding: 18px 56px; font-size: 18px;">Start Now</button>
       </div>
 
