--- a/index.html
+++ b/index.html
@@ -353,6 +353,11 @@
   <h3>💳 Unlock Full Analysis</h3>
   <p>Get detailed recommendations, negotiation strategies & market insights.</p>
   
+  <div style="background: rgba(76, 181, 255, 0.1); padding: 12px; border-radius: 8px; margin-bottom: 15px; display: flex; align-items: center; gap: 8px; justify-content: center; border: 1px solid rgba(76, 181, 255, 0.2);">
+    <span style="font-size: 16px;">🔒</span>
+    <span style="color: #a0a0a0; font-size: 12px;">Secure payment with Stripe • Your data is encrypted</span>
+  </div>
+  
   <div class="plan-options">
     <div class="plan-option selected" id="payOption1" onclick="selectPayOption('once')">
       <p class="plan-label">ONE-TIME</p>
