--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     .section h2 { font-size: 18px; color: #00d4ff; margin-bottom: 15px; font-weight: 700; }
     .form-group { margin-bottom: 15px; }
     label { display: block; font-size: 14px; font-weight: 600; color: #c0c0c0; margin-bottom: 8px; }
-    input, select, textarea { width: 100%; padding: 12px; border: 1px solid rgba(76, 181, 255, 0.3); background: rgba(76, 181, 255, 0.05); border-radius: 8px; font-size: 14px; font-family: inherit; color: #e0e0e0; transition: all 0.3s; }
-    input::placeholder, textarea::placeholder { color: #606070; }
+input, select, textarea { width: 100%; padding: 12px; border: 1px solid rgba(76, 181, 255, 0.3); background: rgba(76, 181, 255, 0.05); border-radius: 8px; font-size: 14px; font-family: inherit; color: #808080; transition: all 0.3s; }
+input::placeholder, textarea::placeholder { color: #707070; }
     input:focus, select:focus, textarea:focus { outline: none; border-color: #00d4ff; background: rgba(76, 181, 255, 0.1); box-shadow: 0 0 0 3px rgba(76, 181, 255, 0.15); }
     select option { background: #ffffff; color: #000000; }
     
