--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@ input::placeholder, textarea::placeholder { color: #707070; }
 
           <div class="form-group">
             <label>Hours Per Week</label>
-            <input type="number" id="hoursPerWeek" value="45">
+            <input type="number" id="hoursPerWeek" placeholder="40">
           </div>
 
           <div class="form-group">
