--- a/index.html
+++ b/index.html
@@ -1242,11 +1242,11 @@ setTimeout(() => {
     showScreen('resultScreen');
     
     showFeedbackTab();
-  } catch (error) {
-    console.error('Analysis error:', error);
-    alert('Error during analysis. Please try again.');
-    
-  } finally {
+} catch (error) {
+  console.error('Analysis error:', error);
+  alert('Error during analysis. Please try again.');
+}
+  finally {
   btn.textContent = 'Analyze This Offer';
   btn.disabled = false;
   clearInterval(progressInterval);
