--- a/index.html
+++ b/index.html
@@ -741,6 +741,49 @@ input::placeholder, textarea::placeholder { color: #707070; }
         </div>
 
         <div class="section">
+  <h2>Technical Proficiency</h2>
+  
+  <div class="form-group">
+    <label>Strongest programming language?</label>
+    <select id="topLanguage">
+      <option value="">Select or skip</option>
+      <option value="Python">Python</option>
+      <option value="Java">Java</option>
+      <option value="JavaScript">JavaScript</option>
+      <option value="SQL">SQL</option>
+      <option value="C++">C++</option>
+      <option value="Go">Go</option>
+      <option value="Other">Other</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label>Skill level?</label>
+    <select id="languageLevel">
+      <option value="">Select</option>
+      <option value="Beginner">Beginner (learning)</option>
+      <option value="Intermediate">Intermediate (comfortable)</option>
+      <option value="Expert">Expert (production code)</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label>Top tool/framework? (e.g., Splunk, React, Kubernetes)</label>
+    <input type="text" id="topTool" placeholder="e.g., Splunk, Docker, AWS">
+  </div>
+
+  <div class="form-group">
+    <label>Your level with that tool?</label>
+    <select id="toolLevel">
+      <option value="">Select</option>
+      <option value="Beginner">Beginner</option>
+      <option value="Intermediate">Intermediate</option>
+      <option value="Expert">Expert</option>
+    </select>
+  </div>
+</div>
+
+        <div class="section">
           <h2>Additional Notes</h2>
           <div class="form-group">
             <label>Anything else that matters? (Optional)</label>
