--- a/index.html
+++ b/index.html
@@ -1243,6 +1243,10 @@ const progressInterval = setInterval(() => {
     priority_stability: parseInt(document.getElementById('priorityStability').value),
     priority_remote: parseInt(document.getElementById('priorityRemote').value),
     priority_brand: parseInt(document.getElementById('priorityBrand').value),
+    topLanguage: document.getElementById('topLanguage').value,
+  languageLevel: document.getElementById('languageLevel').value,
+  topTool: document.getElementById('topTool').value,
+  toolLevel: document.getElementById('toolLevel').value,
     resumeData: resumeData ? resumeData.text.substring(0, 2000) : null
   };
 
