--- a/index.html
+++ b/index.html
@@ -356,6 +356,75 @@ input::placeholder, textarea::placeholder { color: #707070; }
   color: #a0a0a0;
   font-size: 14px;
 }
+    /* SKILL SLIDERS */
+.skill-slider-group {
+  background: rgba(76, 181, 255, 0.05);
+  padding: 16px;
+  border-radius: 8px;
+  margin-bottom: 12px;
+  border: 1px solid rgba(76, 181, 255, 0.2);
+}
+
+.skill-slider-label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.skill-name {
+  font-weight: 600;
+  color: #00d4ff;
+  font-size: 14px;
+}
+
+.skill-level-display {
+  font-size: 12px;
+  color: #64ff9f;
+  font-weight: 700;
+  background: rgba(100, 255, 159, 0.2);
+  padding: 2px 8px;
+  border-radius: 4px;
+}
+
+.skill-slider-input {
+  width: 100%;
+  height: 6px;
+  border-radius: 3px;
+  background: linear-gradient(90deg, rgba(76, 181, 255, 0.2) 0%, rgba(100, 255, 159, 0.2) 100%);
+  outline: none;
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
+}
+
+.skill-slider-input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #00d4ff 0%, #64ff9f 100%);
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0, 212, 255, 0.5);
+  border: 2px solid #0f0f1e;
+}
+
+.skill-slider-input::-moz-range-thumb {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #00d4ff 0%, #64ff9f 100%);
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0, 212, 255, 0.5);
+  border: 2px solid #0f0f1e;
+}
+
+.skill-slider-input:hover::-webkit-slider-thumb {
+  box-shadow: 0 0 20px rgba(0, 212, 255, 0.8);
+  transform: scale(1.2);
+}
+    
 /* PROGRESS BAR */
 .analysis-progress {
   width: 100%;
