--- a/index.html
+++ b/index.html
@@ -1186,21 +1186,30 @@ if ((extracted.certifications && extracted.certifications.length > 0) ||
   }
   
   // Build HTML for all skills
+ // Build HTML for all skills
   allSkills.forEach(skill => {
     skillHTML += `
-    <div class="form-group">
-      <label>${skill}</label>
-      <select class="skillLevel" data-skill="${skill}">
-        <option value="">Select proficiency</option>
-        <option value="Beginner">Beginner</option>
-        <option value="Intermediate">Intermediate</option>
-        <option value="Expert">Expert</option>
-      </select>
+    <div class="skill-slider-group">
+      <div class="skill-slider-label">
+        <span class="skill-name">${skill}</span>
+        <span class="skill-level-display" data-display="${skill}">Beginner</span>
+      </div>
+      <input type="range" class="skill-slider-input skillLevel" data-skill="${skill}" min="1" max="3" value="1">
     </div>
     `;
   });
   
   document.getElementById('skillLevelFields').innerHTML = skillHTML;
+  
+  // Add event listeners for slider updates
+  document.querySelectorAll('.skill-slider-input').forEach(slider => {
+    slider.addEventListener('input', (e) => {
+      const value = e.target.value;
+      const display = e.target.parentElement.querySelector('[data-display]');
+      const levels = ['Beginner', 'Intermediate', 'Expert'];
+      display.textContent = levels[value - 1];
+    });
+  });
 } else {
   document.getElementById('technicalProficiencySection').style.display = 'none';
 }
@@ -1358,10 +1367,11 @@ const progressInterval = setInterval(() => {
   topTool: document.getElementById('topTool').value,
   toolLevel: document.getElementById('toolLevel').value,
     resumeData: resumeData ? resumeData.text.substring(0, 2000) : null,
-    skillLevels: Array.from(document.querySelectorAll('.skillLevel')).reduce((acc, select) => {
-    const skill = select.dataset.skill;
-    const level = select.value;
-    if (level) acc[skill] = level;
+    skillLevels: Array.from(document.querySelectorAll('.skillLevel')).reduce((acc, slider) => {
+    const skill = slider.dataset.skill;
+    const value = slider.value;
+    const levels = ['Beginner', 'Intermediate', 'Expert'];
+    acc[skill] = levels[value - 1];
     return acc;
   }, {}),
     
